--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Modern Business
+                    Welcome to RRW Multimedia Inc.
                 </h1>
             </div>
             <div class="col-md-4">
@@ -185,7 +185,8 @@
                     </div>
                     <div class="panel-body">
                         <p>We do a wide range of installs anything from Projectors, Smartboards, SmartTV's,
-                        TV's, Drive-thru Communication Systems, Large Electric/Manual Screens.</p>
+                        TV's, Drive-thru Communication Systems, Large Electric/Manual Screens, Large/Small PA systems,
+                        Speaker, Amp, Laminator repair.</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -193,10 +194,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
+                        <h4><i class="fa fa-fw fa-compass"></i> Security &amp; Surveillance</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Full line of CCTV - Covert cameras ,IP ,analog HDTVi/HDCVi cameras, DVR, NVR, Maglock</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
