--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: (706) 506-1078</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:RRWMMINC@GMAIL.COM">RRWMMINC@GMAIL.COM</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">H</abbr>: Monday - Friday: 8:00 AM to 5:00 PM</p>
