--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.2.0</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> Networking</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Complete Telephony and Data Networking solutions - installation, troubleshooting and design.</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -169,16 +169,12 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
+                        <h4><i class="fa fa-fw fa-gift"></i> Audio &amp; Video Solutions</h4>
                     </div>
                     <div class="panel-body">
-<<<<<<< HEAD
                         <p>We do a wide range of installs anything from Projectors, Smartboards, SmartTV's,
                         TV's, Drive-thru Communication Systems, Large Electric/Manual Screens, Large/Small PA systems,
                         Speaker, Amp, Laminator repair.</p>
-=======
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
->>>>>>> parent of df16052... new stuff
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
