--- a/index.html
+++ b/index.html
@@ -118,31 +118,18 @@
     </nav>
 
     <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
+    <header id="myCarousel" class="carousel">
+
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
                 <div class="fill" style="background-image:url('./img/logo.jpg"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
-                </div>
+
             </div>
         </div>
 
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
+
     </header>
 
     <!-- Page Content -->
@@ -158,7 +145,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Networking</h4>
+                        <h4><i class="fa fa-sitemap"></i> Networking</h4>
                     </div>
                     <div class="panel-body">
                         <p>Complete Telephony and Data Networking solutions - installation, troubleshooting and design.</p>
@@ -169,7 +156,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Audio &amp; Video Solutions</h4>
+                        <h4><i class="fa fa-volume-up"></i> Audio &amp; Video Solutions</h4>
                     </div>
                     <div class="panel-body">
                         <p>We do a wide range of installs anything from Projectors, Smartboards, SmartTV's,
@@ -182,7 +169,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Security &amp; Surveillance</h4>
+                        <h4><i class="fa fa-video-camera"></i> Security &amp; Surveillance</h4>
                     </div>
                     <div class="panel-body">
                         <p>Full line of CCTV - Covert cameras ,IP ,analog HDTVi/HDCVi cameras, DVR, NVR, Maglock</p>
