--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3296.057588279283!2d-85.32944648525192!3d34.29807651218325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x888a990da2970419%3A0x29424edbbcea49ca!2s3117+Huffaker+Rd+NW+%23114a%2C+Rome%2C+GA+30165!5e0!3m2!1sen!2sus!4v1444940707643" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
@@ -219,7 +219,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; RRW Multimedia Inc. 2015</p>
                 </div>
             </div>
         </footer>
