--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-video-camera"></i> Security &amp; Surveillance</h4>
+                        <h4><i class="fa fa-video-camera"></i> Surveillance</h4>
                     </div>
                     <div class="panel-body">
                         <p>Full line of CCTV - Covert cameras ,IP ,analog HDTVi/HDCVi cameras, DVR, NVR, Maglock</p>
