--- a/contact.html
+++ b/contact.html
@@ -120,13 +120,13 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3296.057588279283!2d-85.32944648525192!3d34.29807651218325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x888a990da2970419%3A0x29424edbbcea49ca!2s3117+Huffaker+Rd+NW+%23114a%2C+Rome%2C+GA+30165!5e0!3m2!1sen!2sus!4v1444940707643" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3296.872713880596!2d-85.24285868524429!3d34.27729541328495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x888aa2fa04ed8081%3A0x81fba321fd12d7fe!2sRRW+Inc!5e0!3m2!1sen!2sus!4v1445028328991" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
                 <h3>Contact Details</h3>
                 <p>
-                    3117 Huffaker Rd NW Suite 114a<br>Rome, GA 30165<br>
+                    117 Huffaker Rd NW Suite 114a<br>Rome, GA 30165<br>
                 </p>
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: (706) 506-1078</p>
