--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -150,7 +150,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                            <img class="img-responsive" src="./img/cabin.jpg" alt="">
                         </div>
                         <div class="item">
                             <img class="img-responsive" src="http://placehold.it/750x500" alt="">
