--- a/index.html
+++ b/index.html
@@ -97,18 +97,8 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel">
 
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="fill" style="background-image:url('./img/logo.jpg"></div>
-
-            </div>
-        </div>
-
+<img class="img-responsive" src="./img/logo.jpg" alt="">
 
     </header>
 
