--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="panel-body">
                         <p>We do a wide range of installs anything from Projectors, Smartboards, SmartTV's,
                         TV's, Drive-thru Communication Systems, Large Electric/Manual Screens, Large/Small PA systems,
-                        Speaker, Amp, Laminator repair.</p>
+                        Speaker, Amp and Laminator repair.</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <h4><i class="fa fa-video-camera"></i> Surveillance</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Full line of CCTV - Covert cameras ,IP ,analog HDTVi/HDCVi cameras, DVR, NVR, Maglock</p>
+                        <p>Full line of CCTV - Covert cameras ,IP ,analog HDTVi/HDCVi cameras, DVR, NVR and acess controls</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
