--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
                 <img class="img-responsive customer-img" src="./img/gcs.jpg" alt="">
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="./img/btcs.jpg" alt="">
+        <!-- not sure -->        <img class="img-responsive customer-img" src="" alt="">
             </div>
         </div>
         <!-- /.row -->
