--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Complete Telephony and Data Networking solutions - installation, troubleshooting and design.</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="./services.html" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                         <p>We do a wide range of installs anything from Projectors, Smartboards, SmartTV's,
                         TV's, Drive-thru Communication Systems, Large Electric/Manual Screens, Large/Small PA systems,
                         Speaker, Amp and Laminator repair.</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="./services.html" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Full line of CCTV - Covert cameras ,IP ,analog HDTVi/HDCVi cameras, DVR, NVR and acess controls</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="./services.html" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -188,29 +188,6 @@
         </div>
         <!-- /.row -->
 
-        <!-- Features Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
-            </div>
-            <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.2.0</strong>
-                    </li>
-                    <li>jQuery v1.11.0</li>
-                    <li>Font Awesome v4.1.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-            </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-            </div>
-        </div>
-        <!-- /.row -->
 
         <hr>
 
