--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     </nav>
 
 
-<img class="img-responsive" src="./img/logo.jpg" alt="">
+<img class="img-responsive" src="./img/logo.jpg" class="center-block img-responsive"/>
+
 
     </header>
 
