--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
         <!-- /.container -->
     </nav>
 
-
-<img class="img-responsive" src="./img/logo.jpg" class="center-block img-responsive"/>
-
+<img src="img/logo.jpg" class="center-block img-responsive"/>
 
     </header>
 
