--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,9 @@
                     <li class="active">
                         <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="portfolio-1-col.html">Portfolio</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
                         <ul class="dropdown-menu">
