--- a/screens.html
+++ b/screens.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>RRW Multimedia - Portfolio</title>
+    <title>RRW Multimedia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,6 @@
                     <li>
                         <a href="portfolio-1-col.html">Portfolio</a>
                     </li>
-
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -107,136 +106,90 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">One Column Portfolio
+                <h1 class="page-header">Portfolio Item
                     <small>Subheading</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">One Column Portfolio</li>
+                    <li class="active">Portfolio Item</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Project One -->
+        <!-- Portfolio Item Row -->
         <div class="row">
-            <div class="col-md-7">
-                <a href="nheight.html">
-                    <img class="img-thumbnail img-hover" src="./img/cablea.jpg" alt="" width="304" height="236">
-                </a>
+
+            <div class="col-md-8">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="img-responsive" src="./img/screen.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="./img/screen2.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="./img/screen3.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-5">
-                <h3>North Heights</h3>
-                <h4>Rack clean up</h4>
-                <p>Pre and post cleanup photos.</p>
-                <a class="btn btn-primary" href="nheight.html">View Project</i></a>
-            </div>
+
+            <div class="col-md-4">
+                <h3>Various Screen installs</h3>
+
         </div>
         <!-- /.row -->
 
-        <hr>
-
-        <!-- Project Two -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="headin.html">
-                    <img class="img-responsive img-hover" src="./img/headin.jpg" alt="" width="304" height="236">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Ashworth Middle School</h3>
-                <h4>Headin Install</h4>
-                <p>Converted media cart to headin cabinent.</p>
-                <a class="btn btn-primary" href="headin.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="security.html">
-                    <img class="img-responsive img-hover" src="./img/seca.jpg" alt="" width="304" height="236">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Surveillance Consolidation</h3>
-                <h4>Subheading</h4>
-                <p>Cut size of security station in half for more workroom space</p>
-                <a class="btn btn-primary" href="security.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
+        <!-- Related Projects Row -->
         <div class="row">
 
-            <div class="col-md-7">
-                <a href="screens.html">
-                    <img class="img-responsive img-hover" src="./img/screen.jpg" alt="" width="304" height="236">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Motorized Screens</h3>
-                <h4>Various</h4>
-                <p>Here are multiple various screens we have installed in the past.</p>
-                <a class="btn btn-primary" href="screens.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="#">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Pagination -->
-        <div class="row text-center">
             <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
+                <h3 class="page-header">Related Projects</h3>
             </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                </a>
+            </div>
+
         </div>
         <!-- /.row -->
 
