--- a/nheight.html
+++ b/nheight.html
@@ -153,13 +153,6 @@
             <div class="col-md-4">
                 <h3>Wire managment</h3>
                 <p>Installed Cable Managment.</p>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
             </div>
 
         </div>
@@ -205,7 +198,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; RRW Multimedia INC</p>
                 </div>
             </div>
         </footer>
