--- a/security.html
+++ b/security.html
@@ -150,15 +150,8 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Headin install</h3>
-                <p>New equipment and rack</p>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Installed BlonderTongue RF Modulator</li>
-                    <li>Installaed Pioneer into rackmount adapter</li>
-                    <li>Cleaned up all Coax and removed obsolete hardware</li>
-                    <li>Increased cable distribution signal through whole school!</li>
-                </ul>
+                <h3>Surveillance Consolidation</h3>
+                <p>Cut size of security station in half for more workroom space</p>
             </div>
 
         </div>
