--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -107,13 +107,13 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">One Column Portfolio
-                    <small>Subheading</small>
+                <h1 class="page-header">Portfolio
+                    <small>Archives</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active">One Column Portfolio</li>
+                    <li class="active">Archives</li>
                 </ol>
             </div>
         </div>
@@ -184,7 +184,7 @@
             <div class="col-md-5">
                 <h3>Motorized Screens</h3>
                 <h4>Various</h4>
-                <p>Here are multiple various screens we have installed in the past.</p>
+                <p>Here are multiple various screens we have installed.</p>
                 <a class="btn btn-primary" href="screens.html">View Project</i></a>
             </div>
         </div>
@@ -195,14 +195,13 @@
         <!-- Project Five -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
+                <a href="projector.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
+                <h3>Various Projector</h3>
+                <p>We have done many Projector installs in Schools, Churches, Conference Rooms.</p>
                 <a class="btn btn-primary" href="#">View Project</i></a>
             </div>
         </div>
