--- a/headin.html
+++ b/headin.html
@@ -107,7 +107,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -172,26 +171,26 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="nheight.html">
+                    <img class="img-responsive img-hover img-related" src="./img/cablea.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="security.html">
+                    <img class="img-responsive img-hover img-related" src="./img/seca.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="screens.html">
+                    <img class="img-responsive img-hover img-related" src="./img/screen.jpg" alt=""">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="projector.html">
+                    <img class="img-responsive img-hover img-related" src="./img/proj.jpg" alt="">
                 </a>
             </div>
 
