--- a/portfolio-1-col.html
+++ b/portfolio-1-col.html
@@ -201,8 +201,8 @@
             </div>
             <div class="col-md-5">
                 <h3>Various Projector</h3>
-                <p>We have done many Projector installs in Schools, Churches, Conference Rooms.</p>
-                <a class="btn btn-primary" href="#">View Project</i></a>
+                <p>We have done many Projector installs in Schools, Churches and Conference Rooms.</p>
+                <a class="btn btn-primary" href="projector.html">View Project</i></a>
             </div>
         </div>
         <!-- /.row -->
