--- a/projector.html
+++ b/projector.html
@@ -107,7 +107,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -127,16 +126,15 @@
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="./img/cableb.jpg" alt="">
+                            <img class="img-responsive" src="./img/proj.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="./img/cablea.jpg" alt="">
+                            <img class="img-responsive" src="./img/projector.jpg" alt="">
                         </div>
                     </div>
 
@@ -151,8 +149,7 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Wire managment</h3>
-                <p>Installed Cable Managment.</p>
+                <h3>Various Projectors</h3>
             </div>
 
         </div>
@@ -161,31 +158,33 @@
         <!-- Related Projects Row -->
         <div class="row">
 
+        <div class="row">
+
             <div class="col-lg-12">
                 <h3 class="page-header">Related Projects</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="nheight.html">
+                    <img class="img-responsive img-hover img-related" src="./img/cablea.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="headin.html">
+                    <img class="img-responsive img-hover img-related" src="./img/headin.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="security.html">
+                    <img class="img-responsive img-hover img-related" src="./img/seca.jpg" alt=""">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="screens.html">
+                    <img class="img-responsive img-hover img-related" src="./img/screen.jpg" alt="">
                 </a>
             </div>
 
