--- a/screens.html
+++ b/screens.html
@@ -107,7 +107,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Portfolio Item
-                    <small>Subheading</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -162,31 +161,33 @@
         <!-- Related Projects Row -->
         <div class="row">
 
+        <div class="row">
+
             <div class="col-lg-12">
                 <h3 class="page-header">Related Projects</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="nheight.html">
+                    <img class="img-responsive img-hover img-related" src="./img/cablea.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="headin.html">
+                    <img class="img-responsive img-hover img-related" src="./img/headin.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="security.html">
+                    <img class="img-responsive img-hover img-related" src="./img/seca.jpg" alt=""">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive img-hover img-related" src="http://placehold.it/500x300" alt="">
+                <a href="projector.html">
+                    <img class="img-responsive img-hover img-related" src="./img/proj.jpg" alt="">
                 </a>
             </div>
 
