--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- /.row -->
 
         <!-- Portfolio Section -->
-        <div class="row">
+<!--         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Portfolio Heading</h2>
             </div>
